tests/errors/test-error-007.slax
version 1.0;

{
    var $test = ;
}

match {
    var $test = ;
}

match /foo {
    var $test = ;
    var $a = "reset";
    match this;
    var $b = "reset";
    <content> {
	<one> {
	    <two> {
}
